--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <script>
         // Your configuration
         const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbzjp5ECobCxjJpjzKePvuVAb0bk79Q9naqLghrSO-2cGdwJVOcgV3V2G_iPWyaCf9NkIA/exec'; // Replace with your deployed Apps Script URL
-        const RAZORPAY_KEY = 'rzp_test_WhSEV2SfARdFbR'; // Replace with your Razorpay key
+        const RAZORPAY_KEY = 'rzp_live_cugQoe3Vcc0cgb'; // Replace with your Razorpay key
         const WORKSHOP_FORM_URL = 'https://docs.google.com/forms/d/e/1FAIpQLSdBxuYWf0iTcUKnWCF69mPDXGuwWLfcxPUNKe7JY_y7o30jsQ/viewform';
 
         async function verifyEmail() {
